# srt-to-docx

./: .gitignore  LICENSE  README.md  Taskfile.yml  pyproject.toml
src/srt_to_docx/: __main__.py  main.py  srt_to_docx.py
src/srt_to_docx/__assets__/: srt-to.docx
