[project]
name = "srt-to-docx"
version = "0.1.1"
description = "Convert SRT subtitle files to formatted DOCX documents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docxtpl>=0.20.0",
    "srt2>=3.5.4",
]

[project.scripts]
srt-to-docx = "srt_to_docx.__main__:main"

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
srt_to_docx = ["__assets__/*.docx"]
